--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     }
   },
   "devDependencies": {
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.9.1",
     "husky": "^1.0.0-rc.6",
     "lint-staged": "^7.1.0",
     "prettier": "^1.12.1"
